# BirdWatcher

./: CMakeLists.txt  azure-pipelines.yml
dependencies/spinnaker/include/: AdapterConfig.h  SpinUpdate.h
dependencies/spinnaker/macOS/lib/: libCppUnit_clang90_v3_0.dylib  libGCBaseTest_clang90_v3_0.dylib  libGCBase_clang90_v3_0.dylib  libGenApi_clang90_v3_0.dylib  libLog_clang90_v3_0.dylib  libMathParser_clang90_v3_0.dylib  libNodeMapData_clang90_v3_0.dylib  libResUsageStat_clang90_v3_0.dylib  libSpinUpdate.dylib  libSpinUpdate.dylib.2  libSpinVideo.dylib  libSpinVideo.dylib.2  libSpinVideo.dylib.2.2.0.48  libSpinVideo.dylib.2.3.0.77  libSpinVideo_C.dylib  libSpinVideo_C.dylib.2  libSpinVideo_C.dylib.2.2.0.48  libSpinVideo_C.dylib.2.3.0.77  libSpinnaker.dylib  libSpinnaker.dylib.2  libSpinnaker_C.dylib  libSpinnaker_C.dylib.2  libSpinnaker_C.dylib.2.2.0.48  libSpinnaker_C.dylib.2.3.0.77  libXmlParser_clang90_v3_0.dylib  liblog4cpp_clang90_v3_0.dylib
dependencies/spinnaker/macOS/lib/flir-gentl/: FLIR_GenTL.cti  bash_profile.flirgentl
dependencies/spinnaker/windows/lib64/vs2015/: SpinVideo_v140.lib
include/: BirdWatcher.h
src/: BirdWatcher.cpp
